# fastapi-example

./: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
src/fastapi_example/: api.py
src/fastapi_example/models/: movie_titles.py
