[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
fastapi-camelcase = "^1.0.5"
uvicorn = "^0.17.0"
SQLAlchemy = "^1.4.34"
dateparser = "^1.1.1"
requests = "^2.27.1"
psycopg2 = "^2.9.3"

[tool.poe.tasks.local-server]
sequence = [
    {shell = "uvicorn fastapi_example.api:app --reload --port 8011"},
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
